Profile page: All Games, all loses & opponents categories now work, hovering effect corrected

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,9 +4,16 @@
 }
 
 tr:hover { 
-  background: rgba(185, 200, 219, 0.863); 
+  /*  background: rgba(185, 200, 219, 0.863);   */
+   cursor: pointer;
+ } 
+
+ tr#cell_hover:hover {
+  background: rgba(185, 200, 219, 0.863);  
   cursor: pointer;
-}
+} 
+
+
 
 .card .table td, .card .table th {
   padding: 0;
