1)Profile page connected with Single Game Stats game, 2)Scrabble lib updated, 3)Scrabble statistics now disabled, 4)Card statistics updated, 5)Hovering corrected

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,10 +3,9 @@
   font-size: 1rem;
 }
 
-tr:hover { 
-  /*  background: rgba(185, 200, 219, 0.863);   */
-   cursor: pointer;
- } 
+ tr:hover {   
+   cursor: default;
+ }  
 
  tr#cell_hover:hover {
   background: rgba(185, 200, 219, 0.863);  
