--- a/views/my_profile_page.ejs
+++ b/views/my_profile_page.ejs
@@ -8,16 +8,14 @@
   <!-- Header -->
   <!-- Header -->
   <div class="header pb-6 d-flex align-items-center"
-       style="min-height: 500px; background-image: url(../assets/profile-cover.jpg); background-size: cover; background-position: center top;">
+       style="min-height: 500px; background-image: url(../assets/hannah-rodrigo-mf_3yZnC6ug-unsplash.jpg); background-size: cover; background-position: center top;">
     <!-- Mask -->
-    <span class="mask bg-gradient-default opacity-8"></span>
+    <span class="mask bg-gradient-default opacity-5"></span>
     <!-- Header container -->
     <div class="container-fluid d-flex align-items-center">
       <div class="row">
-        <div class="col-lg-7 col-md-10">
+        <div class="col-lg-12 col-md-12 col-sm-12">
           <h1 class="display-2 text-white">Hello <%= name %></h1>
-          <p class="text-white mt-0 mb-5">This is your profile page. You can see the progress you've made with your work
-            and manage your projects or assigned tasks</p>
           <a href="/euxp1q23yqfg167s4316g4sq"
              class="btn btn-neutral">Go to Konstantina's profile</a>
           <a href="/5fae6b01eeab478c1207e2bf"
@@ -238,20 +236,39 @@
                           <tr id="cell_hover"
                               class="all_cells_hover">
                             <td>
-                              <div class="media align-items-center">
-                                <div class="media-body">
-                                  <span class="name mb-0 text-sm">
-                                    <%= positionStats.posAllGamesStats.games[i].players[0].name %></span>
-                                </div>
-                              </div>
+                              <form action="/single-game-stats"
+                                    method="post">
+                                <button type="submit"
+                                        name="game_id"
+                                        value="<%= positionStats.posAllGamesStats.games[i]._id %>"
+                                        class="my-btn-link">
+                                  <div class="media align-items-center">
+
+                                    <div class="media-body">
+                                      <span class="name mb-0 text-sm">
+                                        <%= positionStats.posAllGamesStats.games[i].players[0].name %></span>
+                                    </div>
+
+                                  </div>
+                                </button>
+                              </form>
                             </td>
                             <td>
-                              <div class="media align-items-center">
-                                <div class="media-body">
-                                  <span class="name mb-0 text-sm"> <%= positionStats.posAllGamesStats.scores[i][0] %>
-                                  </span>
-                                </div>
-                              </div>
+                              <form action="/single-game-stats"
+                                    method="post">
+                                <button type="submit"
+                                        name="game_id"
+                                        value="<%= positionStats.posAllGamesStats.games[i]._id %>"
+                                        class="my-btn-link">
+                                  <div class="media align-items-center">
+                                    <div class="media-body">
+                                      <span class="name mb-0 text-sm">
+                                        <%= positionStats.posAllGamesStats.scores[i][0] %>
+                                      </span>
+                                    </div>
+                                  </div>
+                                </button>
+                              </form>
                             </td>
                           </tr>
                           <% } %>
@@ -276,20 +293,37 @@
                           <tr id="cell_hover"
                               class="all_cells_hover">
                             <td>
-                              <div class="media align-items-center">
-                                <div class="media-body">
-                                  <span class="name mb-0 text-sm">
-                                    <%= positionStats.posAllGamesStats.games[i].players[1].name %></span>
-                                </div>
-                              </div>
+                              <form action="/single-game-stats"
+                                    method="post">
+                                <button type="submit"
+                                        name="game_id"
+                                        value="<%= positionStats.posAllGamesStats.games[i]._id %>"
+                                        class="my-btn-link">
+                                  <div class="media align-items-center">
+                                    <div class="media-body">
+                                      <span class="name mb-0 text-sm">
+                                        <%= positionStats.posAllGamesStats.games[i].players[1].name %></span>
+                                    </div>
+                                  </div>
+                                </button>
+                              </form>
                             </td>
                             <td>
-                              <div class="media align-items-center">
-                                <div class="media-body">
-                                  <span class="name mb-0 text-sm"> <%= positionStats.posAllGamesStats.scores[i][1] %>
-                                  </span>
-                                </div>
-                              </div>
+                              <form action="/single-game-stats"
+                                    method="post">
+                                <button type="submit"
+                                        name="game_id"
+                                        value="<%= positionStats.posAllGamesStats.games[i]._id %>"
+                                        class="my-btn-link">
+                                  <div class="media align-items-center">
+                                    <div class="media-body">
+                                      <span class="name mb-0 text-sm">
+                                        <%= positionStats.posAllGamesStats.scores[i][1] %>
+                                      </span>
+                                    </div>
+                                  </div>
+                                </button>
+                              </form>
                             </td>
                           </tr>
                           <% } %>
@@ -314,30 +348,46 @@
                           <tr id="cell_hover"
                               class="all_cells_hover">
                             <td>
-                              <div class="media align-items-center">
-                                <div class="media-body">
-                                  <% if ( positionStats.posAllGamesStats.games[i].players[2].name != null){ %>
-                                  <span class="name mb-0 text-sm">
-                                    <%= positionStats.posAllGamesStats.games[i].players[2].name %> </span>
-                                  <% } else { %>
-                                  <span class="name mb-0 text-sm">
-                                    &nbsp; </span>
-                                  <% } %>
-                                </div>
-                              </div>
+                              <form action="/single-game-stats"
+                                    method="post">
+                                <button type="submit"
+                                        name="game_id"
+                                        value="<%= positionStats.posAllGamesStats.games[i]._id %>"
+                                        class="my-btn-link">
+                                  <div class="media align-items-center">
+                                    <div class="media-body">
+                                      <% if ( positionStats.posAllGamesStats.games[i].players[2].name != null){ %>
+                                      <span class="name mb-0 text-sm">
+                                        <%= positionStats.posAllGamesStats.games[i].players[2].name %> </span>
+                                      <% } else { %>
+                                      <span class="name mb-0 text-sm">
+                                        &nbsp; </span>
+                                      <% } %>
+                                    </div>
+                                  </div>
+                                </button>
+                              </form>
                             </td>
                             <td>
-                              <div class="media align-items-center">
-                                <div class="media-body">
-                                  <% if ( positionStats.posAllGamesStats.scores[i][2] > 0){ %>
-                                  <span class="name mb-0 text-sm">
-                                    <%= positionStats.posAllGamesStats.scores[i][2] %> </span>
-                                  <% } else { %>
-                                  <span class="name mb-0 text-sm">
-                                    &nbsp; </span>
-                                  <% } %>
-                                </div>
-                              </div>
+                              <form action="/single-game-stats"
+                                    method="post">
+                                <button type="submit"
+                                        name="game_id"
+                                        value="<%= positionStats.posAllGamesStats.games[i]._id %>"
+                                        class="my-btn-link">
+                                  <div class="media align-items-center">
+                                    <div class="media-body">
+                                      <% if ( positionStats.posAllGamesStats.scores[i][2] > 0){ %>
+                                      <span class="name mb-0 text-sm">
+                                        <%= positionStats.posAllGamesStats.scores[i][2] %> </span>
+                                      <% } else { %>
+                                      <span class="name mb-0 text-sm">
+                                        &nbsp; </span>
+                                      <% } %>
+                                    </div>
+                                  </div>
+                                </button>
+                              </form>
                             </td>
                           </tr>
                           <% } %>
@@ -362,30 +412,46 @@
                           <tr id="cell_hover"
                               class="all_cells_hover">
                             <td>
-                              <div class="media align-items-center">
-                                <div class="media-body">
-                                  <% if ( positionStats.posAllGamesStats.games[i].players[3].name != null){ %>
-                                  <span class="name mb-0 text-sm">
-                                    <%= positionStats.posAllGamesStats.games[i].players[3].name %> </span>
-                                  <% } else { %>
-                                  <span class="name mb-0 text-sm">
-                                    &nbsp; </span>
-                                  <% } %>
-                                </div>
-                              </div>
+                              <form action="/single-game-stats"
+                                    method="post">
+                                <button type="submit"
+                                        name="game_id"
+                                        value="<%= positionStats.posAllGamesStats.games[i]._id %>"
+                                        class="my-btn-link">
+                                  <div class="media align-items-center">
+                                    <div class="media-body">
+                                      <% if ( positionStats.posAllGamesStats.games[i].players[3].name != null){ %>
+                                      <span class="name mb-0 text-sm">
+                                        <%= positionStats.posAllGamesStats.games[i].players[3].name %> </span>
+                                      <% } else { %>
+                                      <span class="name mb-0 text-sm">
+                                        &nbsp; </span>
+                                      <% } %>
+                                    </div>
+                                  </div>
+                                </button>
+                              </form>
                             </td>
                             <td>
-                              <div class="media align-items-center">
-                                <div class="media-body">
-                                  <% if ( positionStats.posAllGamesStats.scores[i][3] > 0){ %>
-                                  <span class="name mb-0 text-sm">
-                                    <%= positionStats.posAllGamesStats.scores[i][3] %> </span>
-                                  <% } else { %>
-                                  <span class="name mb-0 text-sm">
-                                    &nbsp; </span>
-                                  <% } %>
-                                </div>
-                              </div>
+                              <form action="/single-game-stats"
+                                    method="post">
+                                <button type="submit"
+                                        name="game_id"
+                                        value="<%= positionStats.posAllGamesStats.games[i]._id %>"
+                                        class="my-btn-link">
+                                  <div class="media align-items-center">
+                                    <div class="media-body">
+                                      <% if ( positionStats.posAllGamesStats.scores[i][3] > 0){ %>
+                                      <span class="name mb-0 text-sm">
+                                        <%= positionStats.posAllGamesStats.scores[i][3] %> </span>
+                                      <% } else { %>
+                                      <span class="name mb-0 text-sm">
+                                        &nbsp; </span>
+                                      <% } %>
+                                    </div>
+                                  </div>
+                                </button>
+                              </form>
                             </td>
                           </tr>
                           <% } %>
@@ -447,7 +513,7 @@
 
     //Change the title of the general table & initialize variables
     var length = 0;
-    var positionStats = <%-JSON.stringify(positionStats) %>;
+    var positionStats = <%-JSON.stringify(positionStats) %> ;
     var posStats;
 
 
@@ -456,7 +522,7 @@
       //Specific user ID
 
       //Bring all opponents 
-      var opponents = <%-JSON.stringify(opponents) %>;
+      var opponents = <%-JSON.stringify(opponents) %> ;
 
       //Store current opponent id 
       var userID = category.replace("UserID:", "");
@@ -525,24 +591,38 @@
         if (posStats.scores[i][j] == 0) {
           tempScore = "\xa0";
         }
-        //Change names of first player 
+        //Repopulate table with appropriate cells
         $('#general-player' + j + '-table-body').append(
           '<tr id="cell_hover" class="all_cells_hover">  \
             <td> \
-              <div class="media align-items-center" > \
-                <div class="media-body" > \
-                  <span class="name mb-0 text-sm">' + tempName +
-          '</span> \
-                </div> \
-              </div> \
+              <form action="/single-game-stats" \
+                    method="post"> \
+                <button type="submit" \
+                        name="game_id" \
+                        value="'+ posStats.games[i]._id +'" \
+                        class="my-btn-link"> \
+                  <div class="media align-items-center" > \
+                    <div class="media-body" > \
+                      <span class="name mb-0 text-sm">' + tempName + '</span> \
+                    </div> \
+                  </div> \
+                </button> \
+              </form> \
             </td> \
             <td > \
-              <div class="media align-items-center" > \
-                <div class="media-body"> \
-                  <span class="name mb-0 text-sm">' + tempScore +
-          '</span> \
-                </div> \
-              </div> \
+              <form action="/single-game-stats" \
+                    method="post"> \
+                <button type="submit" \
+                        name="game_id" \
+                        value="'+ posStats.games[i]._id +'" \
+                        class="my-btn-link"> \
+                  <div class="media align-items-center" > \
+                    <div class="media-body"> \
+                      <span class="name mb-0 text-sm">' + tempScore + '</span> \
+                    </div> \
+                  </div> \
+                </button> \
+              </form> \
             </td> \
           </tr>'
         );
