--- a/views/partials/topnav.ejs
+++ b/views/partials/topnav.ejs
@@ -27,10 +27,10 @@
         <a class="nav-link font-weight-bold"
            href="/">Home <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item active">
+      <!-- <li class="nav-item active">
         <a class="nav-link font-weight-bold"
            href="/scrabble-statistics">Scrabble Statistics <span class="sr-only">(current)</span></a>
-      </li>
+      </li> -->
       <li class="nav-item active float-right">
         <a class="nav-link font-weight-bold"
            href="/5fae6b01eeab478c1207e2bf">My Profile<span class="sr-only">(current)</span></a>
